--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,5 +6,100 @@
 </head>
 <body>
   <h1><%= message %></h1>
+
+<div class="caixa">
+  <div class="borda">
+    <img src="/public/img/bola.png" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+   <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola amarela.png" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola azul.jpg" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola branca.png" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola verde.jpg" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola rosa.jpg" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola preta.jpg" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola marrom.jpg" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/bola nike.jpg" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+
+  
+  <div class="borda">
+    <img src="/public/img/adidas.jpg" alt="...">
+    <div class="borda" >
+      <p>Uma bola macia e confortavel</p>
+    </div>
+    <button>VER</button>
+  </div>
+  
+
+</div>
+
+
 </body>
 </html>
