--- a/public/styles.css
+++ b/public/styles.css
@@ -2,9 +2,13 @@ img{
 width: 50%;
 height: 50%;
 }
+html{
+background-color: #393939;
+
+}
 
 .borda{
-    background-color: #961dff;
+    background-color: #32cd32;
 	border-radius: 10px;
 	padding: 20px;
 	margin: 20px;
