--- a/views/produto.ejs
+++ b/views/produto.ejs
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Projeto Express e EJS</title>
-  <link rel="stylesheet" type="text/css" href="/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-  <h1><%= message %></h1>
-
-<div class="caixa">
-  <div class="borda">
-    <img src="/bola.png" alt="...">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-  </div>
-
   
-  <div class="borda">
-    <img src="/bola amarela.png" alt="...">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-  </div>
-
-
-</div>
-
-
 </body>
 </html>
