--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,101 +5,151 @@
   <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
+  <header>
   <h1><%= message %></h1>
-
+ </header>
+ <a href="produto">
 <div class="caixa">
   <div class="borda">
-    <img src="/public/img/bola.png" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
    <button>VER</button>
   </div>
+</a>
+  
+<a href="produto">
+    <div class="borda">
+      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
+      <div class="borda" >
+        <p>Uma bola macia e confortavel</p>
+      </div>
+     <button>VER</button>
+    </div>
+  </a>
 
   
+  <a href="produto">
+    <div class="borda">
+      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
+      <div class="borda" >
+        <p>Uma bola macia e confortavel</p>
+      </div>
+     <button>VER</button>
+    </div>
+  </a>
+
+  
+  <a href="produto">
+    <div class="borda">
+      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
+      <div class="borda" >
+        <p>Uma bola macia e confortavel</p>
+      </div>
+     <button>VER</button>
+    </div>
+  </a>
+</div>
+
+<!--Caixa 2-->
+<a href="produto">
+<div class="caixa">
   <div class="borda">
-    <img src="/public/img/bola amarela.png" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
-
+</a>
   
+<a href="produto">
   <div class="borda">
-    <img src="/public/img/bola azul.jpg" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
+</a>
+
 
   
+<a href="produto">
   <div class="borda">
-    <img src="/public/img/bola branca.png" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
+</a>
 
-  
+
+<a href="produto">
   <div class="borda">
-    <img src="/public/img/bola verde.jpg" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
+</a>
 
-  
+  </div>
+<!--Caixa 3-->
+<a href="produto">
+  <div class="caixa">
   <div class="borda">
-    <img src="/public/img/bola rosa.jpg" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
-
+</a>
   
+<a href="produto">
   <div class="borda">
-    <img src="/public/img/bola preta.jpg" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
+</a>
+
 
   
+<a href="produto">
   <div class="borda">
-    <img src="/public/img/bola marrom.jpg" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
+</a>
+
 
   
+<a href="produto">
   <div class="borda">
-    <img src="/public/img/bola nike.jpg" alt="...">
+    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
     <div class="borda" >
       <p>Uma bola macia e confortavel</p>
     </div>
-    <button>VER</button>
+   <button>VER</button>
   </div>
-
-  
-  <div class="borda">
-    <img src="/public/img/adidas.jpg" alt="...">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-    <button>VER</button>
-  </div>
-  
+</a>
 
 </div>
 
+  
 
+<footer>
+  <h1>Valeu Meu Mano</h1>
+</footer>
 </body>
 </html>
