--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,8 @@
+*{
+padding: 0;
+margin: 0;	
+}
+
 img{
 width: 50%;
 height: 50%;
@@ -6,9 +11,22 @@ html{
 background-color: #393939;
 
 }
+header{
+	height: 100px;
+	background-color: black;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+header h1{
+font-family: Georgia, Times, serif;
+color: white;
+}
+
 
 .borda{
-    background-color: #32cd32;
+    background-color: #2bb7ae;
 	border-radius: 10px;
 	padding: 20px;
 	margin: 20px;
@@ -22,6 +40,24 @@ background-color: #393939;
 }
 
 .caixa{
-justify-content: center;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	align-content:center;
+}	
+footer{
+	height: 100px;
+	background-color: black;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	footer h1{
+		font-family: Georgia, Times, serif;
+		color: white;
+		}
 
-}
+
+
+
+
