--- a/views/produto.ejs
+++ b/views/produto.ejs
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/produto.css">
   <title>Document</title>
 </head>
 <body>
-  
+
+  <header>
+    <h1>Lojinha</h1>
+   </header>
+   <div class="caixa">
+    <div class="borda">
+      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
+        <p>Uma bola macia e confortavel</p>
+    
+     <button>VER</button>
+    </div>
+   </div>
 </body>
 </html>
