--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,146 +5,22 @@
   <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
-  <header>
-  <h1><%= message %></h1>
- </header>
- <a href="produto">
-<div class="caixa">
+   <div class="caixa">
+  <%  for (let produto of produtos) { %>
+ <a href=>
+ 
   <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
+    <h2><%=produto.nome%></h2>
+    <img src="/img/<%=produto.imagem%>" alt="Uma bola macia e confortavel">
     <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
+      <p><%=produto.preço%></p>
     </div>
    <button>VER</button>
   </div>
 </a>
-  
-<a href="produto">
-    <div class="borda">
-      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-      <div class="borda" >
-        <p>Uma bola macia e confortavel</p>
-      </div>
-     <button>VER</button>
-    </div>
-  </a>
-
-  
-  <a href="produto">
-    <div class="borda">
-      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-      <div class="borda" >
-        <p>Uma bola macia e confortavel</p>
-      </div>
-     <button>VER</button>
-    </div>
-  </a>
-
-  
-  <a href="produto">
-    <div class="borda">
-      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-      <div class="borda" >
-        <p>Uma bola macia e confortavel</p>
-      </div>
-     <button>VER</button>
-    </div>
-  </a>
 </div>
+<% }  %>
 
-<!--Caixa 2-->
-<a href="produto">
-<div class="caixa">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-  
-<a href="produto">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-
-
-  
-<a href="produto">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-
-
-<a href="produto">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-
-  </div>
-<!--Caixa 3-->
-<a href="produto">
-  <div class="caixa">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-  
-<a href="produto">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-
-
-  
-<a href="produto">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-
-
-  
-<a href="produto">
-  <div class="borda">
-    <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-    <div class="borda" >
-      <p>Uma bola macia e confortavel</p>
-    </div>
-   <button>VER</button>
-  </div>
-</a>
-
-</div>
 
   
 
