--- a/views/produto.ejs
+++ b/views/produto.ejs
@@ -12,12 +12,14 @@
     <h1>Lojinha</h1>
    </header>
    <div class="caixa">
-    <div class="borda">
-      <img src="/img/bola.png" alt="Uma bola macia e confortavel">
-        <p>Uma bola macia e confortavel</p>
+   
+    <h2><%=produto.nome%></h2>
+    <img src="/img/<%= produto.imagem %>" alt="Uma bola macia e confortavel">
+   
+      <p><%=produto.preço%></p>
     
      <button>VER</button>
     </div>
-   </div>
+ 
 </body>
 </html>
